--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="col-4">
             <img class="game-img" src="./assets/Domes.jpeg" alt="#">
           <h3 class="game-title">Dome's Burguer</h3>
-          <p class="description">Avenida Efigênio Salles, 2300 Setor Comercial 2 loja B-013, 
+          <p class="description">Av. Efigênio Salles, 2300 Setor Comercial 2 loja B-013, 
             MUNDI - Aleixo, Manaus - AM, 69060-020
           </p>
           <a class="game-link" href="https://www.instagram.com/domesburgers/?hl=pt">Saiba mais</a>
