--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="col-4">
             <img class="game-img" src="/assets/amazonico.jpg" alt="#">
         <h3 class="game-title">Amazônico peixaria</h3>
-        <p class="description">Av. Darcy Vargas, 226 - Parque Dez de Novembro, Manaus - AM, 69055-035
+        <p class="description">Avenida Darcy Vargas, 226 - Parque Dez de Novembro, Manaus - AM, 69055-035
         </p>
         <a class="game-link" href="https://www.instagram.com/amazonicopeixaria/">Saiba mais</a>
         </div>
